fix(layout): heart icon alignment 📏

--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -1,3 +1,8 @@
+div {
+  position: relative;
+  text-align: center;
+}
+
 img {
   border: 1px solid #ddd;
   border-radius: 4px;
@@ -8,8 +13,9 @@ img {
 span {
   color: red;
   opacity: 77%;
-  top: 100px;
-  left:50px;
+  top: 50%;
+  left:50%;
   font-size: 150px;
   position: absolute;
+  transform: translate(-50%, -50%);
 }
